<resources>
    <string name="app_name" translatable="false">Glyph Writer</string>
    <string name="documents">Documents</string>
    <string name="no_documents">Hhm …    \nIt seems like if there are no documents jet…</string>
    <string name="add_document">Add</string>
    <string name="new_document_title">Create a new Document</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_create">Create</string>
    <string name="default_file_prefix">"Untitled "</string>
    <string name="error_empty_string">The name cannot be empty</string>
    <string name="error_invalid_string">This characters are not allowed: \" * / \\ : &lt; &gt; ? |</string>
    <string name="error_repeated_string">This name is already in use.</string>
    <string name="menu_item_export">Export</string>
    <string name="menu_item_delete">Delete</string>
    <string name="button_delete">Delete</string>
    <string name="delete_document">Delete this Document</string>
    <string name="delete_message_document">Do you really want to delete the document \"%s\"?\nThis action cannot be undone!</string>
    <string name="title_export">Export</string>
    <string name="button_save">SAVE</string>
    <string name="button_share">SHARE</string>
    <string name="share_title">Share file:</string>
    <string name="button_ok">OK</string>
    <string name="issue_code_title">This is the error code:</string>
    <string name="label_error_code">error code</string>
    <string name="error_unexpected_title">unexpected error</string>
    <string name="error_unexpected_text">An unexpected error has occurred, indicating a problem with the app. Please restart the app and check for updates.</string>
    <string name="issue_suffix">%s\n\nIf none of the above options help, copy the error code and send an email with the error code to the developer (website-tutorials@gmx.de).</string>
    <string name="menu_item_import_document">import document</string>
    <string name="menu_item_create_document">new document</string>
    <string name="import_document_title">Import this document</string>
    <string name="import_document_message">Choose a name for the document:</string>
    <string name="button_import">Import</string>
    <string name="menu_item_dashboard">Dashboard</string>
    <string name="menu_item_documents">Documents</string>
    <string name="menu_item_sign_list">Sign List</string>
    <string name="menu_item_group_editor">Group Editor</string>
    <string name="menu_item_vocabulary">Vocabulary</string>
    <string name="menu_item_dictionary">Dictionary</string>
    <string name="menu_item_preferences">Preferences</string>
    <string name="menu_item_about">About this App</string>
    <string name="navigation_description_text"><i>An free open source app</i>\nMade by: Georg Schierholt</string>
    <string name="about_version_name">Version: %s</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="no_vocab">Hhm …    \nIt seems like if there is no vocabulary jet…</string>
    <string name="add_vocab">Add</string>
    <string name="content_description_add_document">Add a document</string>
    <string name="content_description_add_vocab">Add vocabulary</string>
    <string name="menu_item_import_vocab">import vocabulary</string>
    <string name="menu_item_create_vocab">create vocabulary set</string>
    <string name="new_vocab_set_title">Create a new vocabulary set</string>
    <string name="new_vocab_set_description">Create a new vocabulary set to which you can add new vocabulary cards and learn them.</string>
    <string name="delete_vocab">Delete this vocabulary set</string>
    <string name="delete_message_vocab">Do you really want to delete the vocabulary set \"%s\"?\nThis action cannot be undone!</string>
    <string name="button_training">Training</string>
    <string name="button_practise">Practise</string>
    <string name="vocab_card_number_template" formatted="false">Card %d/%d</string>
    <string name="property_text_size_label">text size</string>
    <string name="property_layout_label">writing layout</string>
    <string name="content_description_writing_layout_lines">writing layout lines</string>
    <string name="content_description_writing_layout_columns">writing layout columns</string>
    <string name="content_description_vertical_orientation_top">move small signs to the top</string>
    <string name="content_description_vertical_orientation_middle">center small signs</string>
    <string name="content_description_vertical_orientation_bottom">move small signs to the bottom</string>
    <string name="content_description_writing_direction_ltr">left-to-right layout</string>
    <string name="content_description_writing_direction_rtl">right-to-left layout</string>
    <string name="error_broken_document_title">broken document</string>
    <string name="error_broken_document_text">This document is broken. If you imported it from outside the app, please try importing it again. If the problem continues or if you did not import the document, please restart the app and check for updates.</string>
    <string name="nav_drawer_open">Apri menu</string>
    <string name="nav_drawer_close">Chiudi menu</string>
    <string name="nav_header_subtitle">Comunicazione Aumentativa</string>
    <string name="nav_translate">Traduttore</string>
    <string name="nav_history">Cronologia</string>
    <string name="nav_settings">Impostazioni</string>
    <string name="history_empty_title">Nessuna traduzione</string>
    <string name="history_empty_subtitle">Le traduzioni salvate appariranno qui</string>
    <string name="history_clear_all">Cancella cronologia</string>
    <string name="history_deleted">Traduzione eliminata</string>
    <string name="history_coverage_fmt">Copertura: %d%%</string>
    <string name="undo">Annulla</string>
    <plurals name="history_cleared">
        <item quantity="one">%d traduzione eliminata</item>
        <item quantity="other">%d traduzioni eliminate</item>
    </plurals>
    <plurals name="history_symbol_count">
        <item quantity="one">%d simbolo</item>
        <item quantity="other">%d simboli</item>
    </plurals>
    <string name="bliss_tab_label">Bliss Translator</string>
    <string name="bliss_label_language">Source language</string>
    <string name="bliss_label_suggestions">Suggestions</string>
    <string name="bliss_label_output">Translation (Bliss tokens)</string>
    <string name="bliss_label_symbols">Bliss symbols</string>
    <string name="bliss_lang_label">Language:</string>
    <string name="bliss_suggestions_label">Suggestions:</string>
    <string name="bliss_symbols_label">Bliss symbols:</string>
    <string name="bliss_hint_input">Text to translate…</string>
    <string name="bliss_btn_translate">Translate</string>
    <string name="bliss_btn_clear">Clear</string>
    <string name="bliss_btn_share">Share SVG</string>
    <string name="bliss_loading">Loading dictionary…</string>
    <string name="bliss_no_results">No results. Try different words.</string>
    <string name="bliss_coverage">Coverage: %d%%</string>
    <string name="bliss_unknown_word">Symbol not found</string>
    <string name="bliss_exact">exact</string>
    <string name="bliss_lemma">lemma</string>
    <string name="bliss_ngram">phrase</string>
    <string name="bliss_fallback">category</string>
    <string name="bliss_unknown">unknown</string>
    <string name="bliss_cd_spinner_language">Select source language for Bliss translation</string>
    <string name="bliss_cd_input_text">Input text field. Type or paste the text you want to translate into Bliss symbols.</string>
    <string name="bliss_cd_btn_translate">Translate the input text into Bliss symbols</string>
    <string name="bliss_cd_progress">Translation in progress, please wait</string>
    <string name="bliss_cd_output">Translation result in Bliss tokens</string>
    <string name="bliss_cd_symbol_container">Grid of Bliss symbols corresponding to the translated text</string>
    <string name="bliss_cd_suggestions">Predictive suggestions for the current word</string>
    <string name="bliss_cd_fab_share">Share the Bliss translation as an SVG image</string>
    <string name="bliss_cd_mode_auto">Modalità anteprima automatica attiva. Tocca per passare alla modalità manuale.</string>
    <string name="bliss_cd_mode_manual">Modalità manuale attiva. Tocca per attivare l'anteprima automatica.</string>
    <string name="bliss_chip_tooltip">BCI-AV: %1$d\nName: %2$s\nWord: \u2018%3$s\u2019\nMatch: %4$s\nIndicators: %5$s</string>
    <string name="bliss_chip_no_indicators">none</string>
    <string name="bliss_stats_desc">%1$d symbols  •  %2$d unknown  •  %3$d%%</string>
    <string-array name="bliss_language_names">
        <item>Italian (IT)</item>
        <item>English (EN)</item>
        <item>German (DE)</item>
        <item>French (FR)</item>
        <item>Spanish (ES)</item>
        <item>Dutch (NL)</item>
        <item>Norwegian (NO)</item>
        <item>Swedish (SV)</item>
    </string-array>
    <string-array name="bliss_language_codes" translatable="false">
        <item>it</item>
        <item>en</item>
        <item>de</item>
        <item>fr</item>
        <item>es</item>
        <item>nl</item>
        <item>no</item>
        <item>sv</item>
    </string-array>
    <string name="bliss_msg_translating">Translating…</string>
    <string name="bliss_msg_no_result">No Bliss symbols found for this text.</string>
    <string name="bliss_msg_error">Translation error. Please try again.</string>
    <string name="bliss_msg_empty_input">Please enter some text to translate.</string>
    <string name="bliss_msg_share_title">Share Bliss translation</string>
    <string name="bliss_msg_share_chooser">Share SVG via…</string>
    <string name="bliss_a11y_translation_ready">Translation complete. %d Bliss symbols generated.</string>
    <string name="bliss_a11y_symbol_desc">Bliss symbol: %s</string>
    <string name="bliss_a11y_suggestion">Suggestion: %s. Double-tap to insert.</string>
    <string name="bliss_caa_mode_label">Modalità CAA</string>
    <string name="bliss_caa_mode_cd">Attiva modalità comunicazione aumentativa e alternativa: mostra ogni simbolo in una card grande con navigazione avanti/indietro</string>
    <string name="bliss_caa_prev">← Indietro</string>
    <string name="bliss_caa_next">Avanti →</string>
    <string name="bliss_caa_prev_cd">Simbolo precedente</string>
    <string name="bliss_caa_next_cd">Simbolo successivo</string>
    <string name="bliss_caa_badge_exact">esatto</string>
    <string name="bliss_caa_badge_lemma">lemma</string>
    <string name="bliss_caa_badge_ngram">frase</string>
    <string name="bliss_caa_badge_fallback">categoria</string>
    <string name="bliss_caa_badge_unknown">sconosciuto</string>
    <string name="bliss_caa_position_announce">Simbolo %1$d di %2$d</string>
    <string name="bliss_caa_card_position_fmt" formatted="false">%d / %d</string>
    <string name="bliss_caa_card_cd">%1$s, parola: %2$s, simbolo %3$d di %4$d</string>
</resources>